<resources>
    <string name="app_name">ContactsManager</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="show_additional_fields">Show Additional Fields</string>
    <string name="hide_additional_fields">Hide Additional Fields</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="company_name">Comapny Name</string>
    <string name="web_site">Web Site</string>
    <string name="im">Instant Messagin</string>
    <string name="position">Position</string>
    <string name="phone_number_error">Phone number cannot be empty!</string>


    company_name
</resources>
